fixed bug wrap if the string in mex is too long

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ main{
 .my-mex{
     min-width: 30%;
     max-width: 60%;
+    word-wrap: break-word;
 }
 .sent{
     justify-content: end;
